--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,5 +1,7 @@
 name: Minify
+
 run-name: Minify Code
+
 on:
   push:
     branches: ['main']
@@ -20,10 +22,14 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Minify Action
-        uses: anthonyftwang/minify-action@v1.0.1
+      - name: Minify Code
+        uses: Lenni009/minify-js@main
+        with:
+          overwrite: true
 
-      - run: touch .nojekyll
+      - run: |
+          touch .nojekyll
+          find . -name "*.md" -type f -delete
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
