--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write src/"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3",
     "vite": "^5.1.1"
   },
